left side structure and backgound complete, WIP right side structure, buttons seemingly difficult

--- a/index.html
+++ b/index.html
@@ -8,23 +8,23 @@
     <title>Sign Up | Odin Project</title>
 </head>
 <body>
-    <section>
+    <section class="left-side">
         <div class="left-side-container">
-            <div class="logo-title">
-                <div class="logo"></div>
-                <div class="title">Odin</div>
+            <div class="logo-title-container">
+                <img src="https://cdn.statically.io/gh/TheOdinProject/curriculum/5f37d43908ef92499e95a9b90fc3cc291a95014c/html_css/project-sign-up-form/odin-lined.png" alt="odin_logo" id="logo">             
+                <h1 class="title">Odin</h1>
             </div>
-            <div class="pic-credit"></div>
+            <div class="pic-credit">Photo by <a href="https://unsplash.com/@haliewestphoto">Halie West</a> on <a href="https://unsplash.com/">Unsplash</a>.</div>
         </div>
     </section>
-    <section>
+    <section class="right-side">
         <div class="right-side-container">
             <div class="para-1">
                 <p>placeholder</p>
                 <p>placeholder signature</p>
             </div>
             <div class="formsign-up">
-                <form>
+                <form class="sign-up">
                     <div>
                         <label for="first_name">First Name:</label>
                         <input type="text" name="first_name" id="first_name">
