--- a/index.html
+++ b/index.html
@@ -20,42 +20,41 @@
     <section class="right-side">
         <div class="right-side-container">
             <div class="para-1">
-                <p>placeholder</p>
-                <p>placeholder signature</p>
+                <p>This is not a real online service! You know you need something like this in your life to help you realize your deepest dreams.
+                    Sign up now to get started.</p>
+                <p>You know you want to.</p>
             </div>
-            <div class="formsign-up">
+            <div class="formsign-up">Let's do this!
                 <form class="sign-up">
-                    <div>
+                    <div class="form-fields">
                         <label for="first_name">First Name:</label>
                         <input type="text" name="first_name" id="first_name">
                     </div>
-                    <div>
+                    <div class="form-fields">
                         <label for="last_name">Last Name:</label>
                         <input type="text" name="last_name" id="last_name">
                     </div>
-                    <div>
+                    <div class="form-fields">
                         <label for="email_1">Email:</label>
                         <input type="email" name="email_1" id="email_1">
                     </div>
-                    <div>
+                    <div class="form-fields">
                         <label for="phone_number">Phone Number:</label>
                         <input type="tel" name="phone_number" id="phone_number">
                     </div>
-                    <div>
+                    <div class="form-fields">
                         <label for="password">Password:</label>
                         <input type="password" name="password-1" id="password-1">
                     </div>
-                    <div>
+                    <div class="form-fields">
                         <label for="confirm-password">Confirm Password:</label>
                         <input type="password" name="confirm-password" id="confirm-password">
                     </div>
                 </form>
             </div>
-            <section>
+            <section class="bttn-signup">
                 <div class="signup-bttn">
                     <button class="create-account">Create Account</button>
-                </div>
-                <div>
                     <p>Already have an account? <a href="log-in">Log in</a></p>
                 </div>
             </section>
