fixed positions of the form and also the bug of not being able to type in the form fields

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
             <div class="pic-credit">Photo by <a href="https://unsplash.com/@haliewestphoto">Halie West</a> on <a href="https://unsplash.com/">Unsplash</a>.</div>
         </div>
     </section>
-    <section class="right-side">
+    <div class="right-side">
         <div class="right-side-container">
             <div class="para-1">
                 <p>This is not a real online service! You know you need something like this in your life to help you realize your deepest dreams.
@@ -52,13 +52,13 @@
                     </div>
                 </form>
             </div>
-            <section class="bttn-signup">
+            <div class="bttn-signup">
                 <div class="signup-bttn">
                     <button class="create-account">Create Account</button>
                     <p>Already have an account? <a href="log-in">Log in</a></p>
                 </div>
-            </section>
+            </div>
         </div>
-    </section>
+    </div>
 </body>
 </html>
