--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
                 <img src="https://cdn.statically.io/gh/TheOdinProject/curriculum/5f37d43908ef92499e95a9b90fc3cc291a95014c/html_css/project-sign-up-form/odin-lined.png" alt="odin_logo" id="logo">             
                 <h1 class="title">Odin</h1>
             </div>
-            <div class="pic-credit">Photo by <a href="https://unsplash.com/@haliewestphoto">Halie West</a> on <a href="https://unsplash.com/">Unsplash</a>.</div>
+            <div class="pic-credit">Photo by <a href="https://unsplash.com/@haliewestphoto" class="link">Halie West</a> on <a href="https://unsplash.com/" class="link">Unsplash</a>.</div>
         </div>
     </section>
     <div class="right-side">
@@ -55,7 +55,7 @@
             <div class="bttn-signup">
                 <div class="signup-bttn">
                     <button class="create-account">Create Account</button>
-                    <p>Already have an account? <a href="log-in">Log in</a></p>
+                    <p>Already have an account? <a href="log-in" class="log-in">Log in</a></p>
                 </div>
             </div>
         </div>
